# nhl-mds-in-a-box

./: .gitignore  LICENSE  README.md  pyproject.toml  sandbox.ipynb
data/: README.md
extract/: README.md  nhl_api.py  nhl_apis.py  rest_api.py
extract/.dlt/: config.toml
extract/legacy/: do_not_use_nhl_api.py
orchestration/: README.md  airflow.cfg  airflow.db
transform/: README.md  dbt_project.yml  profiles_template.yml
transform/macros/: generate_alias_name.sql  generate_schema_name.sql
transform/models/example/: my_first_dbt_model.sql
transform/models/staging/nhl_api/: _nhl_api__models.yml  _nhl_api__sources.yml  stg_nhl_api__teams.sql
transform/models/staging/nhl_apis/: _nhl_apis__models.yml  _nhl_apis__sources.yml  stg_nhl_search_api__players.sql  stg_nhl_stats_api__games.sql  stg_nhl_stats_api__goalies.sql  stg_nhl_stats_api__skaters.sql  stg_nhl_stats_api__team_season.sql  stg_nhl_stats_api__team_season_stats.sql  stg_nhl_stats_api__teams.sql
transform/seeds/: _properties.yml  player_ids.csv  seasons.csv
