[tool.poetry]
package-mode = false
description = "A project that uses the NHL API to create a modern data stack in a box."
authors = ["Charlie Phil <71610407+charlesphil@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
dbt-core = "^1.8.6"
dbt-duckdb = "^1.8.3"
duckdb = "^1.1.0"
numpy = "^2.1.0"
streamlit = "^1.38.0"
apache-airflow = "^2.10.0"
dlt = "^1.0.0"

[tool.poetry.group.dev.dependencies]
shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.23.2"}
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["INP001"]

[tool.sqlfmt]
exclude = ["./transform/target/**/*", "./transform/dbt_packages/**/*"]
